plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
}

group = 'dev.ultreon'
version = '0.1-SNAPSHOT'

base {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenCentral()

    // CoreLibs maven
    maven { url = "https://github.com/Ultreon/corelibs/raw/main/.mvnrepo" }
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    // Google findbugs
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    // Jetbrains Annotations
    implementation 'org.jetbrains:annotations:23.1.0'
}

test {
    useJUnitPlatform()
}

java {
    withSourcesJar()
}


publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }

    repositories {
        mavenLocal()

        if (project.findProperty("gpr.user") != null && project.findProperty("gpr.key") != null) {
            maven {
                name = "UltreonMaven"
                url = "https://maven.ultreon.dev/snapshots"
                credentials(PasswordCredentials) {
                    username = findProperty("ultreonmvn.name") ?: System.getenv("ULTREON_MVN_NAME")
                    password = findProperty("ultreonmvn.secret") ?: System.getenv("ULTREON_MVN_SEC")
                }
                authentication {
                    basic(BasicAuthentication)
                }
            }
        }
    }
}